// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/SidebarToggle should render and handle clicks correctly when isOpen is false 1`] = `
<SidebarToggleButton
  data-resin-target="sidebartoggle"
  data-testid="sidebartoggle"
  isOpen={false}
  onClick={[Function]}
/>
`;

exports[`elements/content-sidebar/SidebarToggle should render and handle clicks correctly when isOpen is true 1`] = `
<SidebarToggleButton
  data-resin-target="sidebartoggle"
  data-testid="sidebartoggle"
  isOpen={true}
  onClick={[Function]}
/>
`;
